fixed broken UI on message input & channel settings operator menu

--- a/src/ui/MessageInput/index.scss
+++ b/src/ui/MessageInput/index.scss
@@ -15,6 +15,7 @@
     font-style: normal;
     line-height: 1.43;
     max-height: 92px;
+    min-height: 58px;
     overflow-y: scroll;
     letter-spacing: normal;
     padding: 18px 64px 18px 16px;
